MTP-2506 breadcrumbs fix and searchresult crumbs align wip

--- a/mt-kit/core/css/src/global/_links.scss
+++ b/mt-kit/core/css/src/global/_links.scss
@@ -317,16 +317,16 @@ p {
     }
 
     .breadcrumb {
+      @include apply-icon($icon: var(--icon-carret-right-small), $position: before) {
+        margin-right: $spacer-xxx-small;
+      }
       font-size: $font-size-small;
-      padding-right: var(--spacer-xxx-small);
+      padding-right: $spacer-xxx-small;
+      display: inline-flex;
+      align-items: center;
 
       &:first-child::before {
         content: none;
-      }
-      &::before {
-        content: var(--icon-carret-right-small);
-        display: inline-block;
-        margin-right: var(--spacer-xxx-small);
       }
     }
   }
